Commands transformed to lib, even if they have nothing to do in this repo ... However this repo need a refacto, then it could become another repo ... or two ? xD

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,8 @@
 # new scripts from Debian 12 installation
 
 !get_git_branch
-!update_prompt
-!cdSpecial
+!lib/
+!lib/**
 
 # End by ignoring git files
 
